[gd_scene load_steps=13 format=3 uid="uid://cy7bkk80ew3jw"]

[ext_resource type="Texture2D" uid="uid://cu48qh4ctofaq" path="res://Assets/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_2pcyr"]
[ext_resource type="Script" path="res://Scenes/game_over_ui.gd" id="1_i8h0p"]
[ext_resource type="Texture2D" uid="uid://bx1xa65vtyixf" path="res://Assets/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_5grfv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_din86"]
texture = ExtResource("1_2pcyr")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_sm0m2"]
font_names = PackedStringArray("Impact")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_2pm3o"]
font = SubResource("SystemFont_sm0m2")
font_size = 48
font_color = Color(0.870588, 0.694118, 0.0509804, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5nave"]
texture = ExtResource("2_5grfv")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_54cd8"]
font_names = PackedStringArray("Impact")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_vki50"]
font = SubResource("SystemFont_54cd8")
font_size = 24
font_color = Color(0, 0, 0, 0.823529)

[sub_resource type="Animation" id="Animation_aoaku"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.572549)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PainelTopo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(301, 115)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PainelBaixo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(351.5, 363)]
}

[sub_resource type="Animation" id="Animation_pdqvp"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.827451)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PainelTopo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(301, -201), Vector2(301, 115)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PainelBaixo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(351.5, 683), Vector2(351.5, 363)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fy8cq"]
_data = {
"RESET": SubResource("Animation_aoaku"),
"default": SubResource("Animation_pdqvp")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_i8h0p")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.572549)

[node name="PainelTopo" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -275.0
offset_top = 115.0
offset_right = 275.0
offset_bottom = 235.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_din86")

[node name="Label" type="Label" parent="PainelTopo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -22.0
offset_right = 46.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_2pm3o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PainelBaixo" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -224.5
offset_top = -285.0
offset_right = 224.5
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_5nave")

[node name="CenterContainer" type="CenterContainer" parent="PainelBaixo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -53.5
offset_right = 133.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="PainelBaixo/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
columns = 2

[node name="Label" type="Label" parent="PainelBaixo/CenterContainer/GridContainer"]
layout_mode = 2
text = "Tempo sobrevivido:"
label_settings = SubResource("LabelSettings_vki50")

[node name="LabelTempo" type="Label" parent="PainelBaixo/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_vki50")

[node name="Label2" type="Label" parent="PainelBaixo/CenterContainer/GridContainer"]
layout_mode = 2
text = "Inimigos derrotados:"
label_settings = SubResource("LabelSettings_vki50")

[node name="LabelInimigos" type="Label" parent="PainelBaixo/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_vki50")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fy8cq")
}
autoplay = "default"
